edited: corrected mobile text spills

--- a/src/style/_mobile.scss
+++ b/src/style/_mobile.scss
@@ -51,10 +51,11 @@
   .volunteer .application .application_detail {
     border: none;
     border-top: 1px solid $mainBG;
-    @include flex;
-    @include justify-content(center);
+    margin-right: 10px;
+    // @include flex;
+    // @include justify-content(center);
 
-    margin: 0;
+    // margin: 0;
     
     p {
       padding-top: 15px;
